--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,25 @@ dependencies = [
     "numpy>=2.3.2",
     "opencv-python>=4.11.0.86",
 ]
+
+[tool.ruff]
+# See https://beta.ruff.rs/docs/configuration/ for configuration
+line-length = 88  # Same as Black
+target-version = "py311"  # or "py310", "py39", depending on your Python version
+
+select = [
+  "E",  # pycodestyle: style errors
+  "F",  # pyflakes: logic errors like unused imports
+  "I",  # isort: import sorting
+  "B",  # flake8-bugbear: common bugs and bad practices
+  "UP", # pyupgrade: keep code modern
+  "N",  # pep8-naming: consistent naming
+]
+
+# Ignore rules you don’t care about
+ignore = [
+  "E501"  # Don't enforce line length manually (Black handles this)
+]
+
+[tool.ruff.format]
+docstring-code-format = true  # Format code blocks in docstrings
